@@ -1,6 +1,8 @@
 trunk
 =====
 * added argument 'threshnames' to mxFIMLObjective()
+* eliminated "initialize" method for MxMatrix objects
+* added "omxCreateMatrix" method for MxMatrix objects
 
 Pre-Release 999.0.0-1527 (January 6, 2011)
 ==========================================
